# server/src/routes/index.ts
@@ -1,10 +1,0 @@
-import { Router } from 'express';
-import authRoutes from './authRoutes';
-import busRoutes from './busRoutes';
-
-const router = Router();
-
-router.use('/auth', authRoutes);
-router.use('/buses', busRoutes);
-
-export default router;
